# Livraria-Django-FabricaV-

./: .gitignore  .pdm-python  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: autor.py  categoria.py  livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
usuario/migrations/: 0001_initial.py
