[project]
name = "Livraria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Eduardo Montandon", email = "emontandon11@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.1",
    "django-cors-headers>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.3.0",
]

[tool.black]
line-length = 120
